# xgh-music-player-demo

./: LICENSE  readme.md
xghMusicPlayer/: CMakeLists.txt  CMakeLists.txt.user.9e05f54  background_image.qrc  icon.qrc  init_fun.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressBar.cpp
